<resources>
    <string name="app_name">런런분석</string>
    <string name="btn_fetch">가져오기</string>
    <string name="chk_full_records">1초 간격 저장</string>
    <string name="chk_full_records_desc">짧은 질주 분석용 · 파일이 10배 가까이 커집니다</string>
    <string name="status_logged_in">로그인됨. 날짜를 선택하고 가져오기 버튼을 눌러 러닝 기록을 받아오세요.</string>
    <string name="status_login_failed">로그인에 실패했습니다.</string>
    <string name="welcome_title">런런분석</string>
    <string name="welcome_subtitle">Garmin Connect의 러닝 기록을\n한 번에 가져와요</string>
    <string name="welcome_caption">내 계정 데이터만 가져옵니다</string>
    <string name="btn_login">Garmin Connect 로그인</string>
    <string name="status_offline">인터넷에 연결되어 있지 않습니다. 연결 상태를 확인한 뒤 다시 시도해주세요.</string>
    <string name="status_session_expired">세션이 만료되었습니다. 다시 로그인한 뒤 시도해주세요.</string>
    <string name="status_storage_permission_needed">저장소 권한이 없어 Downloads 폴더에 저장할 수 없습니다. 권한을 허용한 뒤 다시 시도해주세요.</string>
    <string name="dialog_session_expired_title">세션 만료</string>
    <string name="dialog_session_expired_message">Garmin Connect 로그인 세션이 만료되었습니다. 다시 로그인할까요?</string>
    <string name="dialog_relogin">다시 로그인</string>
    <string name="dialog_later">나중에</string>
    <string name="dialog_cancel">취소</string>
    <string name="menu_logout">로그아웃</string>
    <string name="dialog_ran_today_title">오늘은 달렸니?</string>
    <string name="dialog_ran_today_message">기록은 달린 사람만 남길 수 있어.</string>
    <string name="dialog_ran_today_yes">달렸지!</string>
    <string name="dialog_ran_today_no">아직</string>
    <string name="status_not_yet">아직 늦지 않았어. 신발 신고 나가자!</string>
    <string name="dialog_logout_title">로그아웃</string>
    <string name="dialog_logout_message">저장된 로그인 정보를 지웁니다. 다시 가져오려면 Garmin Connect에 로그인해야 합니다.</string>
    <string name="status_logged_out">로그아웃되었습니다.</string>
</resources>
